# SweeperReckoning

./: CMakeLists.txt  README.md  goal.txt
config/: anker_config.yaml  euroc_config.yaml
data/anker/: Cplot2D.m  Readme  getTheta.m  getTheta.m~  opt2odom.m  opt2odom.m~  plot2D.m  plotOdom.m~  plotOpt.m  plotOpt2Odom.m  plotOpt2Odom.m~
data/anker/1/: imu_file.cvs  odometer_file.cvs  optical_flow_file.cvs
data/anker/2/: imu_file.cvs  odometer_file.cvs  optical_flow_file.cvs
data/anker/2/output/: attitude.csv  optT.csv  pose2D.csv
data/anker/3/: imu_file.cvs  odometer_file.cvs  optical_flow_file.cvs
data/anker/4/: imu_file.cvs  odometer_file.cvs  optical_flow_file.cvs
data/anker/5/: imu_file.cvs  odometer_file.cvs  optical_flow_file.cvs
data/anker/5/output/: ankerData.csv  attitude.csv  pose2D.csv
data/simulation/: kdq_imu_pose.txt  kdq_imu_pose_noise.txt  matlab.mat
output/: lpfData.m  plotAtt.m  plotAttNoRef.m
output/anker/: att.csv
output/euroc/: att.csv  refatt.csv  test1.mat  test2.mat  test3.mat
output/simulation/: att.csv  matlab_p_0.mat  matlab_p_1.mat  matlab_p_10_i_01_lpf.mat  matlab_p_1_i_001.mat  matlab_p_1_i_001_lpf.mat  refatt.csv
plan/: SweeperReckoning.emmx
src/: AnkerInterface.cpp  eurocAttEst.cpp  main.cpp  simAttEst.cpp  testCompensate.cpp  testReckoning.cpp
src/Anker/: ankerDataType.h  readAnkerDataFile.cpp  readAnkerDataFile.h
src/AnkerEkfEstimator/: AnkerEkfDefine.h  AnkerEkfEstimator.cpp  AnkerEkfEstimator.h  AnkerEstimator.cpp  AnkerEstimator.h
src/AnomalyDetector/: anomalyDetector.cpp  anomalyDetector.hpp
src/Euroc/: eurocDataType.h  eurocdatatype.h  eurocdatatype.h.autosave  readEurocData.cpp  readEurocData.h
src/Fusion/: mahonyAttEstimator.cpp  mahonyAttEstimator.hpp
src/Reckoning/: DeadReckoning.cpp  DeadReckoning.h
src/Sensor/: imu.cpp  imu.hpp  odometry.cpp  odometry.hpp  optFlow.cpp  optFlow.hpp  sensorType.hpp
src/Transform/: Transform.hpp
src/Utility/: lowPassFilter.cpp  lowPassFilter.hpp  utility.hpp
